fix __builtins__ protection for Sandbox.execute()
SECURITY FIX: __builtins__ is now readonly when execute() is used.
It was only readonly when call() was used.
Vulnerability found by 雪狼 <kurskk141 AT gmail.com>.

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,4 +8,6 @@ Contributors
 ============
 
 masklinn <github.com AT masklinn.net> - fix reST documentation syntax
+雪狼 <kurskk141 AT gmail.com> - found a vulnerability on __builtins__ in
+                                pysandbox 1.5 when Sandbox.execute() was used
 
