--- a/AUTHORS
+++ b/AUTHORS
@@ -10,4 +10,6 @@ Contributors
 masklinn <github.com AT masklinn.net> - fix reST documentation syntax
 雪狼 <kurskk141 AT gmail.com> - found a vulnerability on __builtins__ in
                                 pysandbox 1.5 when Sandbox.execute() was used
+Dan Sigalov <dansmbox AT gmail.com> - found a vulnerability:
+                                frame.f_globals was accessible
 
